--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
-<!-- 
-  TODO: Create a motivational post website.
-Style it how ever you like. 
-Look at the goal image for inspiration.
-But it must have the following features:
-1. The main h1 text should be using the Regular Libre Baskerville Font from Google Fonts:
-  https://fonts.google.com/specimen/Libre+Baskerville
-2. The text should be white and background black.
-3. Add your own image into the images folder inside assets. It should have a 5px white border.
-4. The text should be center aligned.
-5. Create a div to contain the h1, p and img elements. Adjust the margins so that the image and text are centered on the page. 
-  Hint: You horizontally center a div by giving it a width of 50% and a margin-left of 25%.
-  Hint: Set the image to have a width of 100% so it fills the div. 
-6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
-  https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
--->
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Motivational meme Project</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Combining CSS Selectors</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
+
+<!-- Don't change any of the HTML code! -->
+
 <body>
-  <div id="general">
+  <h1>To Do List</h1>
+  <h2>Monday</h2>
+  <div class="box">
+    <p class="done">Do these things today!</p>
+    <ul class="list">
+      <li>Wash Clothes</li>
+      <li class="done">Read</li>
+      <li class="done">Maths Questions</li>
+    </ul>
+  </div>
 
-    <div id="oladimeji">
-      <img src="./assets/images/daenerys.jpeg" width="100%" draggable="true" alt="images of daenerys"> 
-    </div>
+  <ul>
+    <p class="done">Other items</p>
+  </ul>
+  <p>The best preparation for tomorrow is doing your best today.</p>
 
-    <div id="Text">
-
-      <h1 style="text-transform: capitalize;">
-        That Special Moment
-      </h1>
-      <p>when you find the perfect avacodo at the supermarket</p>
-    </div>
-    </div>
 </body>
+
 </html>
