--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Combining CSS Selectors</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>CSS Positioning Exercise</title>
+  <style>
+    /* Write your code here */
+    .blue-box{ background-color: blue;
+      height: 300px;
+      width: 500px;
+      position: relative;
+      top: 200px;
+      left: 200px;
+      z-index: -1;
+
+    }
+
+    .blue-box > .red-circle {
+      background-color: red;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      position:absolute;
+      top: 150px;
+      left: 250px;
+      z-index: 150;
+    }
+  </style>
 </head>
 
-<!-- Don't change any of the HTML code! -->
-
 <body>
-  <h1>To Do List</h1>
-  <h2>Monday</h2>
-  <div class="box">
-    <p class="done">Do these things today!</p>
-    <ul class="list">
-      <li>Wash Clothes</li>
-      <li class="done">Read</li>
-      <li class="done">Maths Questions</li>
-    </ul>
+  <div class="blue-box">
+    <div class="red-circle">
+    </div>
   </div>
-
-  <ul>
-    <p class="done">Other items</p>
-  </ul>
-  <p>The best preparation for tomorrow is doing your best today.</p>
 
 </body>
 
