--- a/solution.html
+++ b/solution.html
@@ -1,29 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- Scroll down for a sample solution -->
 
-<head>
-  <meta charset="UTF-8">
-  <title>Colors</title>
-  <style>
-    body {
-      background-color: antiquewhite;
-    }
 
-    h1 {
-      color: whitesmoke;
-      background-color: darkseagreen;
-    }
 
-    h2 {
-      color: #FAF8F1;
-      background-color: #C58940;
-    }
-  </style>
-</head>
 
-<body>
-  <h1>Hello</h1>
-  <h2>World</h2>
-</body>
 
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<ul>
+  <li>A</li>
+  <li>
+    B
+    <ol>
+      <li>B1</li>
+      <li>B2
+        <ul>
+          <li>B2a
+            <ul>
+              <li>B2aa</li>
+              <li>B2ab</li>
+            </ul>
+          </li>
+          <li>B2b</li>
+          <li>B2c</li>
+        </ul>
+      </li>
+      <li>B3
+        <ol>
+          <li>B31</li>
+          <li>B32</li>
+        </ol>
+      </li>
+    </ol>
+  </li>
+  <li>C</li>
+</ul>
