--- a/solution.html
+++ b/solution.html
@@ -3,63 +3,50 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Float</title>
+  <title>CSS Box Model</title>
   <style>
     div {
-      display: inline-block;
-      width: 40%;
+      height: 200px;
+      width: 200px;
     }
 
     p {
-      font-size: 2em;
+      margin: 0;
     }
 
-    .cat {
-      float: left;
-      background-color: aquamarine;
+    #first {
+      background-color: cadetblue;
+      padding: 20px;
+      border: 10px solid black;
     }
 
-    .dog {
-      float: right;
-      background-color: coral;
+    #second {
+      background-color: gold;
+      border: solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
     }
 
-    img {
-      float: left;
-    }
-
-    footer {
-      clear: both;
-      text-align: center;
-      background-color: blueviolet;
+    #third {
+      background-color: indianred;
+      border: 10px solid black;
+      margin-left: 40px;
     }
   </style>
 </head>
 
 <body>
-  <div class="cat">
-    <h2>CatCSS</h2>
-
-    <img src="cat.jpeg" alt="cat in a box" />
-    <p class="first-paragraph">Nap all day cat dog hate mouse eat string barf pillow no baths hate everything but kitty
-      poochy. Sleep on keyboard
-      toy
-      mouse squeak roll over. Mesmerizing birds. Poop on grasses licks paws destroy couch intently sniff hand. The dog
-      smells
-      bad gnaw the corn cob.</p>
+  <div id="first">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+      id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+      dolor metus, laoreet ac convallis sit amet, efficitur sed dolor. </p>
   </div>
+  <div id="second">
 
-  <div class="dog">
-    <h2>DogCSS</h2>
-    <img src="dog.jpeg" alt="dogs in a box" />
-    <p class="second-paragraph">Heckin good boys and girls long woofer big ol wow very biscit long woofer heck what a
-      nice
-      floof, long doggo noodle
-      horse vvv very taste wow. Very taste wow many pats aqua doggo he made many woofs pupperino, puggo doing me a
-      frighten.</p>
   </div>
+  <div id="third">
 
-  <footer>Copyright. This is the footer</footer>
+  </div>
 </body>
 
 </html>
