--- a/index.html
+++ b/index.html
@@ -4,20 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsiveness</title>
+  <title>Column Layout Methods</title>
   <style>
-    a {
-      display: block;
+    p {
+      padding: 0;
+      margin: 0;
+      font-weight: 700;
     }
+
+    li {
+      list-style: none;
+    }
+
+    .container {
+      padding: 10px;
+      background-color: gold;
+      display: inline-flex;
+      gap: 10px;
+      
+    }
+
   </style>
 </head>
 
 <body>
-  <h1>Responsiveness Methods</h1>
-  <a href="./media-query.html">1. Media Queries</a>
-  <a href="./grid.html">2. CSS Grid</a>
-  <a href="./flexbox.html">3. CSS Flexbox</a>
-  <a href="./bootstrap.html">4. Bootstrap Framework</a>
+  <div class="container">
+    <p>Page Layout Methods</p>
+
+    <li><a href="./html-table.html">HTML Table</a></li>
+    <li><a href="./inline-block.html">Inline-Block</li>
+    <li><a href="./absolute-position.html">Absolute Positioning</li>
+    <li><a href="./float.html">Float</li>
+    <li><a href="./flex.html">Flexbox</li>
+
+  </div>
 </body>
 
 </html>
